# ai-convobot

./: .gitignore  DEPLOYMENT.md  Dockerfile.cpu  Dockerfile.cuda  README.md  companion_database.db  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release-builds.yml
backend/: Cargo.toml  INTERACTION_TRACKING_TESTS.md  PERSON_DETECTION_TESTS.md  build.rs  companion_database.db  test_person_detection.rs
backend/longterm_memory/: meta.json
backend/release-package/: LICENSE
backend/src/: attitude_formatter.rs  character_card.rs  context_manager.rs  database.rs  dialogue_tuning.rs  gpu_allocator.rs  inference_optimizer.rs  inference_performance.rs  llm.rs  llm_scanner.rs  long_term_mem.rs  main.rs  session_manager.rs  simple_tests.rs  system_memory.rs  token_budget.rs
public/: manifest.json  sw.js
release-package/: README.md  VERSION
src/: App.tsx  index.scss  main.tsx  test-setup.ts  test-utils.tsx
src/__tests__/: api.test.ts
src/components/: ChatWindow.tsx
src/components/__tests__/: AttitudeManager.test.tsx  Button.simple.test.tsx  Button.test.tsx  ChatWindow.test.tsx  EditData.test.tsx  Message.test.tsx
src/components/attitude/: AttitudeDisplay.tsx  AttitudeManager.tsx  AttitudeSummaryBar.tsx
src/components/context/: attitudeContext.tsx  messageContext.tsx  sessionContext.tsx  themeContext.tsx
src/components/editData/: EditData.tsx  EditDataPopup.tsx  ThemeSettings.tsx
src/components/interfaces/: AttitudeData.tsx  Config.tsx
src/hooks/: useMobile.ts
src/lib/: utils.ts
(+12 files in other folders)
