[package]
name = "ai-companion"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1.12"

[dependencies]
actix-web = "4.5.1"
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
tantivy = "0.21.1"
chrono = "0.4.37"
png = "0.17.13"
base64 = "0.22.0"
rand = "0.8.5"
regex = "1.10.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10.8"
lazy_static = "1.4.0"
llm = { git = "https://github.com/rustformers/llm" , branch = "gguf" }
# Force console to include std feature to fix indicatif compatibility
console = { version = "*", features = ["std"] }
# Fix zstd version mismatches by pinning compatible versions  
zstd-safe = "=5.0.2"
zstd-sys = "=2.0.9"

[features]
cublas = ["llm/cublas"]
clblast = ["llm/clblast"]
metal = ["llm/metal"]
